<resources>
    <string name="app_name">iPlay Soccer</string>
    <string name="password">Your password</string>
    <string name="email">Your email</string>
    <string name="login_btn">SIGN IN</string>
    <string name="signup">SIGN UP</string>
    <string name="signup_caption">Dont have an account ?</string>
    <string name="login_caption">Enter the following information\nso we can identify you.</string>
    <string name="forget_password">Forget password ?</string>
    <string name="welcome_to">welcome to</string>
    <string name="detail_btn">Detail</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="team">Team</string>
    <string name="menu">Menu</string>
    <string name="nearest_matches">Nearest Matches</string>
    <string name="recommended_for_you">Recommended For You</string>
    <string name="search_tag">search for matches ..</string>
    <string name="stay_tuned">stay tuned</string>
    <string name="stay_tuned_caption">We are still working on it !\nThank you for being patient ..</string>
    <string name="copyright">Developed By MouaadBlhn</string>

    <string-array name="match_names">
        <item>Match name</item>
        <item>Match name</item>
        <item>Match name</item>
        <item>Match name</item>
        <item>Match name</item>
        <item>Match name</item>
        <item>Match name</item>
    </string-array>

    <string-array name="match_location">
        <item>Taroudant</item>
        <item>Agadir</item>
        <item>Marrakech</item>
        <item>Taroudant</item>
        <item>Some place here</item>
        <item>Example</item>
        <item>Drarga</item>
    </string-array>

    <string-array name="match_distance">
        <item>1.6 mi</item>
        <item>2.3 mi</item>
        <item>7.9 mi</item>
        <item>5.4 mi</item>
        <item>1.1 mi</item>
        <item>2.9 mi</item>
        <item>0.5 mi</item>
    </string-array>

    <array name="match_imgs">
        <item>@drawable/card_img_1</item>
        <item>@drawable/card_img_2</item>
        <item>@drawable/card_img_3</item>
        <item>@drawable/card_img_4</item>
        <item>@drawable/card_img_5</item>
        <item>@drawable/card_img_6</item>
        <item>@drawable/card_img_7</item>
    </array>

</resources>