<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/bottom_wave"
        android:paddingHorizontal="30dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/dark_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/app_dark_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.23000002" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/welcome_to"
            android:textColor="@color/purpleLight"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/dark_logo"
            app:layout_constraintEnd_toEndOf="@+id/dark_logo"
            app:layout_constraintStart_toStartOf="@+id/dark_logo" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/login_caption"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.48000002" />

        <EditText
            android:id="@+id/email_field"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_search_field"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/email"
            android:paddingHorizontal="20dp"
            android:textColor="@color/grayDark"
            android:textSize="14sp"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:passwordToggleTint="@color/purpleLight"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/email_field"
            app:layout_constraintStart_toStartOf="@+id/email_field"
            app:layout_constraintTop_toBottomOf="@+id/email_field">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/bg_search_field"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingHorizontal="20dp"
                android:textColor="@color/grayDark"
                android:textSize="14sp"
                android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/forget_pswrd"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/poppins_medium"
            android:gravity="end"
            android:text="@string/forget_password"
            android:textColor="@color/purpleLight"
            android:paddingHorizontal="10dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/password_field"
            app:layout_constraintStart_toStartOf="@+id/password_field"
            app:layout_constraintTop_toBottomOf="@+id/password_field" />

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@drawable/btn_purple_rounded"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/login_btn"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            android:onClick="onLogin"
            app:layout_constraintEnd_toEndOf="@+id/forget_pswrd"
            app:layout_constraintStart_toStartOf="@+id/forget_pswrd"
            app:layout_constraintTop_toBottomOf="@+id/forget_pswrd" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="12dp"
            android:paddingHorizontal="30dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="@+id/submit"
            app:layout_constraintStart_toStartOf="@+id/submit"
            app:layout_constraintTop_toBottomOf="@+id/submit">

            <TextView
                android:id="@+id/bottom_hint"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/signup_caption"
                android:textSize="14sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/signup"
                android:textColor="@color/purpleLight"
                android:textSize="14sp" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/bottom_wave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/ic_wave" />
</RelativeLayout>