<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".HomeActivity">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="25dp"
            android:layout_above="@id/bottomNavigationView">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:paddingHorizontal="10dp"
                android:paddingVertical="20dp"
                android:text="Hi, Jonathan !"
                android:textColor="@color/purpleDark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/search_box"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_search_field"
                android:drawableEnd="@drawable/ic_search"
                android:drawablePadding="10dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_vertical"
                android:hint="@string/search_tag"
                android:paddingHorizontal="15dp"
                android:singleLine="true"
                android:textColor="@color/grayDark"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/recommended_for_you"
                android:textColor="@color/purpleDark"
                android:textSize="18sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/horizontal_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/nearest_matches"
                android:textColor="@color/purpleDark"
                android:textSize="18sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/vertical_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/menu_rounded_corners"
            android:paddingVertical="4dp"
            app:itemIconTint="@color/menu_nav_colors"
            app:itemTextAppearanceActive="@style/BottomNavigationViewTextStyle"
            app:itemTextAppearanceInactive="@style/BottomNavigationViewTextStyle"
            app:itemTextColor="@color/menu_nav_colors"
            app:menu="@menu/bottom_nav_menu" />
    </LinearLayout>


</RelativeLayout>